configured aliases, added "paths"

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,11 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Absolute path */
-    "baseUrl": "src"
+    "baseUrl": "./",
+    "paths": {
+      "components/*": ["src/common/components/*"],
+      "types/*": ["src/common/types/*"]
+    }
   },
   "include": ["src"]
 }
